force-app/main/default/objects/Contact/fields/Admin_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Admin_Sign_Date__c</fullName>
    <label>Admin Sign Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>