force-app/main/default/objects/Contact/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>