force-app/main/default/objects/Contact/fields/AN__c.field-meta.xml
<CustomField>
    <fullName>AN__c</fullName>
    <label>Job Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>