force-app/main/default/objects/Contact/fields/Annual_Approved_Variable_Ammount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Approved_Variable_Ammount__c</fullName>
    <label>Annual Approved Variable Ammount</label>
    <summarizedField>Employee_Reimbursement__c.Total_Monthly_Approved_Variable__c</summarizedField>
    <summaryForeignKey>Employee_Reimbursement__c.Contact_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>