force-app/main/default/objects/Contact/fields/Annual_Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fixed_Cost__c</fullName>
    <label>Annual Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>