force-app/main/default/objects/Contact/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>App</label>
    <type>TextArea</type>
</CustomField>