force-app/main/default/objects/Contact/fields/App_Settings__c.field-meta.xml
<CustomField>
    <fullName>App_Settings__c</fullName>
    <label>App Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>