force-app/main/default/objects/Contact/fields/Avg_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Avg_Mileage__c</fullName>
    <description>this is the average mileage of the contact from december to current month and it assigned from the monthlyCompliancestatusBatch this number is used to show wheather the contact have enough compliance mileage to be compliant</description>
    <label>Avg Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>