force-app/main/default/objects/Contact/fields/BP_Code__c.field-meta.xml
<CustomField>
    <fullName>BP_Code__c</fullName>
    <label>BP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>