force-app/main/default/objects/Contact/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <label>Cell Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Provide</fullName>
            </value>
            <value>
                <fullName>Employee Provide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>