force-app/main/default/objects/Contact/fields/Check_OnBoarding__c.field-meta.xml
<CustomField>
    <fullName>Check_OnBoarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check OnBoarding</label>
    <type>Checkbox</type>
</CustomField>