force-app/main/default/objects/Contact/fields/Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo__c</fullName>
    <label>Company Logo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>