force-app/main/default/objects/Contact/fields/Compliance_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Mileage__c</fullName>
    <inlineHelpText>Compliance Mileage calculation is based on the activation date of contact.
If you want 5000 compliance mileage then select December month of last year</inlineHelpText>
    <label>Compliance Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>