force-app/main/default/objects/Contact/fields/Compliance_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Mileages__c</fullName>
    <formula>No_reimbursement_current_year__c * 416.66</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Mileages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>