force-app/main/default/objects/Contact/fields/Compliance_Need_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Need_Mileage__c</fullName>
    <formula>192.30 * No_of_Bi_Weekly_Reim_for_current_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Needed Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>