force-app/main/default/objects/Contact/fields/compliancestatus__c.field-meta.xml
<CustomField>
    <fullName>compliancestatus__c</fullName>
    <label>compliance status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No – Vehicle Age</fullName>
            </value>
            <value>
                <fullName>No – Vehicle Value</fullName>
            </value>
            <value>
                <fullName>No – Insurance Not Meeting Minimum</fullName>
            </value>
            <value>
                <fullName>No - Insurance Not Provided</fullName>
            </value>
            <value>
                <fullName>No - Mileage</fullName>
            </value>
            <value>
                <fullName>No - Missing Coverage Dates</fullName>
            </value>
            <value>
                <fullName>No – Insurance Card</fullName>
            </value>
            <value>
                <fullName>Expired Insurance</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>No - Expired Insurance</fullName>
                <isActive>false</isActive>
                <label>No - Expired Insurance</label>
            </value>
            <value>
                <fullName>No Compliance</fullName>
                <isActive>false</isActive>
                <label>No Compliance</label>
            </value>
            <value>
                <fullName>Resubmit - Expired Insurance</fullName>
                <isActive>false</isActive>
                <label>Resubmit - Expired Insurance</label>
            </value>
            <value>
                <fullName>Resubmit Insurance – you submitted an insurance card</fullName>
                <isActive>false</isActive>
                <label>Resubmit Insurance – you submitted an insurance card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>