force-app/main/default/objects/Contact/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <inlineHelpText>Date employee is deactivated. They will receive the fixed and last months variable.</inlineHelpText>
    <label>Deactivated Date</label>
    <type>DateTime</type>
</CustomField>