force-app/main/default/objects/Contact/fields/Deactivation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the DeActivatedUserEmailBatch batch runs successfully it should be checked after sending email to Managers and admins.</description>
    <label>Deactivation Email Sent</label>
    <type>Checkbox</type>
</CustomField>