force-app/main/default/objects/Contact/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>