force-app/main/default/objects/Contact/fields/Driver_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Driver_Birthdate__c</fullName>
    <label>Driver Birthdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>