force-app/main/default/objects/Contact/fields/Driver_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Number__c</fullName>
    <label>Driver License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>