force-app/main/default/objects/Contact/fields/Driver_Packet_Status__c.field-meta.xml
<CustomField>
    <fullName>Driver_Packet_Status__c</fullName>
    <label>Driver Packet Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Resent</fullName>
            </value>
            <value>
                <fullName>Resent Again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>