force-app/main/default/objects/Contact/fields/Driver_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Driver_Sign_Date__c</fullName>
    <label>Driver Sign Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>