force-app/main/default/objects/Contact/fields/Driving_State_Text__c.field-meta.xml
<CustomField>
    <fullName>Driving_State_Text__c</fullName>
    <label>Driving State Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>