force-app/main/default/objects/Contact/fields/External_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Email__c</fullName>
    <externalId>true</externalId>
    <label>External Email</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>