force-app/main/default/objects/Contact/fields/First_Payroll__c.field-meta.xml
<CustomField>
    <fullName>First_Payroll__c</fullName>
    <label>First Payroll</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>