force-app/main/default/objects/Contact/fields/Freeze__c.field-meta.xml
<CustomField>
    <fullName>Freeze__c</fullName>
    <label>Freeze</label>
    <type>Date</type>
</CustomField>