force-app/main/default/objects/Contact/fields/Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Rate__c</fullName>
    <formula>( Monthly_Fuel_Price__c /  MPG__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>