force-app/main/default/objects/Contact/fields/Hello_Sign_Error__c.field-meta.xml
<CustomField>
    <fullName>Hello_Sign_Error__c</fullName>
    <label>Hello Sign Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>