force-app/main/default/objects/Contact/fields/Hello_Sign_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Hello_Sign_Request_Id__c</fullName>
    <label>Hello Sign Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>