force-app/main/default/objects/Contact/fields/Hello_Sign_Status__c.field-meta.xml
<CustomField>
    <fullName>Hello_Sign_Status__c</fullName>
    <inlineHelpText>Value shoud be &apos;awaiting_signature&apos; or &apos;signed&apos;</inlineHelpText>
    <label>Hello Sign Driver Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>