force-app/main/default/objects/Contact/fields/Imputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Imputed_Amount__c</fullName>
    <label>Imputed Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>