force-app/main/default/objects/Contact/fields/Insurance_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Minimum__c</fullName>
    <label>Insurance (Minimum)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100/300/50 (Recommended minimum)</fullName>
            </value>
            <value>
                <fullName>100/300/100</fullName>
            </value>
            <value>
                <fullName>300/Single Limit</fullName>
            </value>
            <value>
                <fullName>250/500/100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>