force-app/main/default/objects/Contact/fields/Insurance_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Upload_Date__c</fullName>
    <label>Insurance Upload Date</label>
    <type>Date</type>
</CustomField>