force-app/main/default/objects/Contact/fields/Insurance_Value_Changed__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Value_Changed__c</fullName>
    <label>Insurance Value Changed</label>
    <type>Date</type>
</CustomField>