force-app/main/default/objects/Contact/fields/is_Manual_Entry_User__c.field-meta.xml
<CustomField>
    <fullName>is_Manual_Entry_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field suggest that &quot;Manual Entry&quot; module will be visible in driver related profiles or not.</description>
    <label>is Manual Entry User</label>
    <type>Checkbox</type>
</CustomField>