force-app/main/default/objects/Contact/fields/IsCreatedFromCommunity__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedFromCommunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Field is used in RG_CreateNewUserPageClass for creating new user for community page</inlineHelpText>
    <label>IsCreatedFromCommunity</label>
    <type>Checkbox</type>
</CustomField>