force-app/main/default/objects/Contact/fields/IsDeactivated__c.field-meta.xml
<CustomField>
    <fullName>IsDeactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeactivated</label>
    <type>Checkbox</type>
</CustomField>