force-app/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory Manager</fullName>
            </value>
            <value>
                <fullName>Director of Product Strategy &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Director of Sales</fullName>
            </value>
            <value>
                <fullName>CFO/COO</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Forced Air Product Manager</fullName>
            </value>
            <value>
                <fullName>Director of Product Strategy &amp; Technical Support</fullName>
            </value>
            <value>
                <fullName>Hydronics Application Specialist</fullName>
            </value>
            <value>
                <fullName>Commercial Sales Manager</fullName>
            </value>
            <value>
                <fullName>Accounting Manager</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Director of Human Resources</fullName>
            </value>
            <value>
                <fullName>Design Engineer Lead</fullName>
            </value>
            <value>
                <fullName>Our Brands Manager</fullName>
            </value>
            <value>
                <fullName>KOMPASS Supervisor</fullName>
            </value>
            <value>
                <fullName>Set Team Leader</fullName>
            </value>
            <value>
                <fullName>Set Team Member</fullName>
            </value>
            <value>
                <fullName>Div Mapping Specialist</fullName>
            </value>
            <value>
                <fullName>Surge Set Team Member</fullName>
            </value>
            <value>
                <fullName>KOMPASS Manager</fullName>
            </value>
            <value>
                <fullName>Set/Remodel Manager</fullName>
            </value>
            <value>
                <fullName>Adult Beverage Reset Coor</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>FT Fulfillment Associate</fullName>
            </value>
            <value>
                <fullName>Order Fulfillment Superv</fullName>
            </value>
            <value>
                <fullName>Inspector/Consultant</fullName>
            </value>
            <value>
                <fullName>Director of Safety</fullName>
            </value>
            <value>
                <fullName>Environmental Consultant</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Safety Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>